<?xml version="1.0" encoding="utf-8"?>
<!--Daniel Pham: I wrote and designed the layout for the event item which is
    used in the recycler view. It features several icons, labels and reserved
    text views for dynamically inserted information.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/event_item_row"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:minHeight="?android:attr/listPreferredItemHeight"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="#B2B2B2"
    android:padding="5dp">
    <ImageView
        android:id="@+id/event_type_icon"
        android:layout_width="0dp"
        android:layout_weight=".15"
        android:layout_height="match_parent"
        android:contentDescription="@string/event_type_icon_desc"
        android:src="@drawable/shopping_icon"
        android:padding="12dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:paddingStart="7dp"
        android:paddingEnd="15dp">
        <TextView
            android:id="@+id/event_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="7dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/temp_title_for_event"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/event_item_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/event_item_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/temp_address_of_event"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="11sp"/>
        <TextView
            android:id="@+id/event_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/event_item_address"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/temp_event_distance"
            android:textColor="@color/white"
            android:textSize="11sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".2">
        <TextView
            android:id="@+id/event_item_val_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/temp_dep_time"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingTop="15dp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/event_item_label_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/event_item_val_one"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/dep_label"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:paddingTop="5dp"
            android:textAlignment="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".2">
        <TextView
            android:id="@+id/event_item_val_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/temp_arr_time"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingTop="15dp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/event_item_label_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/event_item_val_two"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/arrival_label"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:paddingTop="5dp"
            android:textAlignment="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageButton
        android:id="@+id/event_item_delete_button"
        android:layout_width="0dp"
        android:layout_weight=".075"
        android:layout_height="match_parent"
        android:contentDescription="@string/delete_button_desc"
        android:src="@drawable/delete_icon"
        android:backgroundTint="#646464"
        />
</LinearLayout>